Fix dropdown overflow bug

--- a/lib-less/_dropdown.less
+++ b/lib-less/_dropdown.less
@@ -5,7 +5,9 @@
 @import "./_helpers";
 @import "./_animations";
 
+// Rest of styling from Bootstrap
 .dropdown-backdrop {
   background: rgba(0, 0, 0, 0.2);
   animation: fadein 0.3s ease-in-out;
+  overflow: auto;
 }
